--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "https://ranierknowles.github.io/SnakeGame",
+  "home": "https://ranierknowles.github.io/Snake-Game",
   "name": "snake",
   "version": "0.1.0",
   "private": true,
